# Go2RemoteConnection

./: .gitignore  README.md  start_remote_connection.sh  start_remote_connection_sim.sh
app/: main.py
install/p2_remote_connection/lib/p2_remote_connection/: web_teleop_bridge
log/: latest_build
src/: web_teleop_bridge.cpp
src/go2_remote_connection/: CMakeLists.txt  package.xml
src/go2_remote_connection/app/: go2_movement_controller.html  index.html  terminal.py
src/go2_remote_connection/app/static/: shared.js
src/go2_remote_connection/include/go2_remote_connection/common/: ros2_sport_client.h
src/go2_remote_connection/src/: front_camera_node.py  web_bridge.cpp
src/go2_remote_connection/src/common/: ros2_sport_client.cpp
src/go2_remote_connection/src/old/: advanced_gamepad_controller_web.cpp  web_teleop_bridge.cpp
src/p2_remote_connection/: CMakeLists.txt  package.xml  requirements.txt
src/p2_remote_connection/app/: go2_front_camera.html  go2_joystick.html  go2_terminal_only.html  index.html  main.py  other.html  ros_bridge.py  terminal.py
src/p2_remote_connection/include/p2_remote_connection/common/: ros2_sport_client.h
src/p2_remote_connection/src/: image_to_compressed_bridge.py  move_forward_meters_node.cpp  web_bridge.cpp  web_teleop_bridge.cpp
